# redbull-backend

./: .gitignore  README.md  database.db  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/langgraph/: agent_factory.py  base_agent.py
app/langgraph/agent/: summarization_agent.py  translation_agent.py
app/langgraph/agent/response/: summarization_model.py  translation_model.py
app/langgraph/langchain/: base_chain.py  config.yaml.example  llm_factory.py  settings.py
app/langgraph/langchain/response/: base_response.py  parser.py
app/langgraph/tests/: translation_agent_test.py
app/logger/: README.md  __init__.py  config.py  database.py  handler.py  queue.py  settings.py
app/repository/: README.md  __init__.py  client.py  schema.py  settings.py  table.py
app/stt/: README.md  __init__.py  model.py  settings.py  table.py  utils.py
results/: redbull_stt.txt
tests/: confest.py  logger_test.py  repository_test.py  test_stt.py
tests/test_data/: EX.test_output.txt
