[project]
name = "redmine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.9.1",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pyannote.audio>=3.3.2",
    "pyannote.core>=5.0.0",
    "pyannote.database>=5.1.3",
    "soundfile>=0.13.1",
    "numpy>=1.24.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytest-asyncio>=0.23.5",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
